# cs214

./: .gitignore  README.md  build.sh  in.txt  out.txt
.github/workflows/: .clang-format  .clang-tidy  clang-tools.yaml
malloc/: CMakeLists.txt  README.txt  build.sh
malloc/src/: helper_free.c  helper_free.h  helper_malloc.c  helper_malloc.h  memgrind.c  mymalloc.c  mymalloc.h  test.c
malloc/tests/: mymalloc_test.c
mysh/: CMakeLists.txt  Makefile  README.txt  batch.sh  build.sh  concurrency_test.sh  test.txt
mysh/src/: builtins.c  builtins.h  builtins_test.c  cd.h  mysh.c  mysh.h
posix/: CMakeLists.txt  Makefile  README.txt  error.c  hashmap.c  hashmap_test.c
posix/src/: error.c  error.h  hashmap.c  hashmap.h  hashmap_test.c  nickmap.c  nickmap.h  word.c
posix/src/test/: example2.txt
posix/src/test/subdir1/: example3.txt
posix/src/test/subdir1/subdir2/: example4.txt
posix/test/: example1.txt  example2.txt
posix/test/subdir1/: example3.txt
posix/test/subdir1/subdir2/: example4.txt
testing/: CMakeLists.txt
testing/tests/: example_test.c
ttts/: CMakeLists.txt  build.sh
ttts/src/: client.py  sbuf.c  sbuf.h  ttt_command.h  ttt_misc.h  ttts.c
